Fix column name columns [Thrift Bug] + Improve execution SEA debugging (#444)
* fix column name columns

* Add cols

* Add fix for short server results

* Add error code for sea flow + fix thrift utils

* Remove log

* Fix ordinal position

* FMT

* address null